--- a/MSRepositorioPlanillasQuinta/MSRepositorioPlanillasQuinta.csproj
+++ b/MSRepositorioPlanillasQuinta/MSRepositorioPlanillasQuinta.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MSEntidades\MSEntidades.csproj" />
+  </ItemGroup>
+
 </Project>
