--- a/MSRepositorioPlanillasQuinta/MSRepositorioPlanillasQuinta.csproj
+++ b/MSRepositorioPlanillasQuinta/MSRepositorioPlanillasQuinta.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="4.5.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
       <PrivateAssets>all</PrivateAssets>
